--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,6 +1,13 @@
 <%- include("partials/header.ejs") %>
-<h1><%=camp.name%></h1>
+<h1><%= camp.name %></h1>
+
 <img src="<%=camp.image%>">
-<p><%=camp.description%></p>
+<p><%= camp.description %></p>
+
+<% camp.comments.forEach(function(comment){ %>
+	<p>
+		<strong> <%= comment.author %> </strong> - <%= comment.text %>		
+	</p>
+<% }); %>
 
 <%- include("partials/footer.ejs") %>
