added routes for comment creation

--- a/views/camps/index.ejs
+++ b/views/camps/index.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header.ejs") %>
+<%- include("../partials/header.ejs") %>
 
 <div class="container">
 	<header class="jumbotron">
@@ -29,4 +29,4 @@
 	</div>
 </div>
 
-<%- include("partials/footer.ejs") %>
+<%- include("../partials/footer.ejs") %>
