--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,8 +2,8 @@
 
 <h1>Home Page</h1>
 
-<p>welcome to BestCamp.</p>
+<p>Welcome to ChowCritic.</p>
 
-<a href="/campsites">view all campsites.</a>
+<a href="/restaurants">view all restaurants.</a>
 
 <%- include("partials/footer.ejs") %>
