--- a/views/restaurants/new.ejs
+++ b/views/restaurants/new.ejs
@@ -2,9 +2,9 @@
 
 <div class="container">
 	<div class="row">
-		<h1 style="text-align: center">create a new campsite</h1>
+		<h1 style="text-align: center">create a new restaurant</h1>
 		<div style="width: 30%; margin:30px auto;">
-			<form action="/campsites" method="POST">
+			<form action="/restaurants" method="POST">
 				<div class="form-group">
 					<input class="form-control" type="text" name="name" placeholder="name">
 				</div>
@@ -18,7 +18,7 @@
 					<button class="btn btn-lg btn-primary btn-block">submit</button>
 				</div>
 			</form>
-			<a href="/campsites">go back</a>
+			<a href="/restaurants">go back</a>
 		</div>
 	</div>
 </div>
