--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -2,7 +2,7 @@
 <div class="container">
 	<div class ="row">
 		<div class="col-md-3">
-			<p class="lead">CampCritic</p>
+			<p class="lead">ChowCritic</p>
 			<div class="list-group">
 				<li class="list-group-item active"> info 1 </li>
 				<li class="list-group-item"> info 2 </li>
@@ -11,19 +11,19 @@
 		</div>
 		<div class="col-md-9">
 			<div class="thumbnail">
-				<img class="img-responsive" src="<%=camp.image%>">
+				<img class="img-responsive" src="<%=restaurant.image%>">
 				<div class="caption-full">
 					<h4 class="pull-right"> $25/night </h4>
-					<h4><a><%= camp.name %></a></h4>
-					<p><%= camp.description %></p>
+					<h4><a><%= restaurant.name %></a></h4>
+					<p><%= restaurant.description %></p>
 				</div>
 			</div>
 			<div class="well">
 				<div class="text-right">
-					<a class="btn btn-success" href="/campsites/<%= camp._id %>/comments/new">add new comment</a>
+					<a class="btn btn-success" href="/restaurants/<%= restaurant._id %>/comments/new">add new comment</a>
 				</div>
 				<hr>
-				<% camp.comments.forEach(function(comment){ %>
+				<% restaurant.comments.forEach(function(comment){ %>
 					<div class="row">
 						<div class="col-md-12">
 							<strong><%= comment.author %></strong>
