--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -16,6 +16,10 @@
 					<h4 class="pull-right"> $25/night </h4>
 					<h4><a><%= restaurant.name %></a></h4>
 					<p><%= restaurant.description %></p>
+					<p>
+						<em>Created By: <%= restaurant.author.username %></em>
+							
+					</p>
 				</div>
 			</div>
 			<div class="well">
