added middleware isUserTheAuthor used for edit/update/delete routes

--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -19,7 +19,11 @@
 					<p>
 						<em>Created By: <%= restaurant.author.username %></em>
 					</p>
-					<a class="btn btn-info btn-lg" href="/restaurants/<%= restaurant._id %>/edit">make changes</a>
+					
+					<form action="/restaurants/<%= restaurant._id %>?_method=DELETE" method="POST">
+						<a class="btn btn-info btn-lg" href="/restaurants/<%= restaurant._id %>/edit">make changes</a>
+						<button class="btn btn-danger btn-lg">remove</button>
+					</form>
 				</div>
 			</div>
 			<div class="well">
