added edit/update/destroy routes for comments

--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -19,11 +19,13 @@
 					<p>
 						<em>Created By: <%= restaurant.author.username %></em>
 					</p>
-					
-					<form action="/restaurants/<%= restaurant._id %>?_method=DELETE" method="POST">
-						<a class="btn btn-info btn-lg" href="/restaurants/<%= restaurant._id %>/edit">make changes</a>
-						<button class="btn btn-danger btn-lg">remove</button>
-					</form>
+					<!-- check if currUser is defined, if so check if the currUser is the author of restaurant -->
+					<% if(currUser && restaurant.author.id.equals(currUser._id)){ %>
+						<form action="/restaurants/<%= restaurant._id %>?_method=DELETE" method="POST">
+							<a class="btn btn-info btn-lg" href="/restaurants/<%= restaurant._id %>/edit">make changes</a>
+							<button class="btn btn-danger btn-lg">remove</button>
+						</form>
+					<% } %>
 				</div>
 			</div>
 			<div class="well">
@@ -39,6 +41,13 @@
 							<p>
 								<%= comment.text %>		
 							</p>
+							<form action="/restaurants/<%= restaurant._id %>/comments/<%= comment._id %>?_method=delete", method="POST">
+								<a class="btn btn-info btn-xs"
+							   	   href="/restaurants/<%= restaurant._id %>/comments/<%= comment._id %>/edit">
+							   	   edit
+								</a>
+								<button class="btn btn-danger btn-xs">remove</button>
+							</form>
 						</div>
 					</div>
 				<% }); %>
