added 1-5 rating to schema, and added rating stars to new/edit/show views

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,8 @@
 
 	<!-- linking custom stylehseet -->
 	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+
+	<script src="https://kit.fontawesome.com/126bd2c7e4.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
