--- a/views/restaurants/edit.ejs
+++ b/views/restaurants/edit.ejs
@@ -17,6 +17,16 @@
 					<input class="form-control" type="text" name="restaurant[description]" value="<%= restaurant.description %>">
 				</div>
 				<div class="form-group">
+					<label for="rating">Rating</label>
+    					<select class="form-control" id="rating" name="restaurant[rating]">
+      						<option value=1>1 Star</option>
+      						<option value=2>2 Star</option>
+      						<option value=3>3 Star</option>
+      						<option value=4>4 Star</option>
+      						<option value=5>5 Star</option>
+    					</select>
+				</div>
+				<div class="form-group">
 					<button class="btn btn-lg btn-primary btn-block">submit</button>
 				</div>
 			</form>
