--- a/views/restaurants/new.ejs
+++ b/views/restaurants/new.ejs
@@ -15,6 +15,16 @@
 					<input class="form-control" type="text" name="description" placeholder="description">
 				</div>
 				<div class="form-group">
+					<label for="rating">Rating</label>
+    					<select class="form-control" id="rating" name="rating">
+      						<option value=1>1 Star</option>
+      						<option value=2>2 Star</option>
+      						<option value=3>3 Star</option>
+      						<option value=4>4 Star</option>
+      						<option value=5>5 Star</option>
+    					</select>
+				</div>
+				<div class="form-group">
 					<button class="btn btn-lg btn-primary btn-block">submit</button>
 				</div>
 			</form>
