improved login and register views

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -23,7 +23,7 @@
     
     <div id="landing-header">
  		<h1>Welcome to ChowCritic!</h1>
-		<a href="/restaurants" class="btn btn-lg btn-success">View All Campgrounds</a>
+		<a href="/restaurants" class="btn btn-lg btn-primary">check out some restaurants</a>
     </div>
     
     <ul class="slideshow">
