--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,22 @@
 <%- include("./partials/header.ejs") %>
 
-<h1>login</h1>
-
-<form action="/login" method="post">
-	<input type="text" name="username" placeholder="username">
-	<input type="password" name="password" placeholder="password">
-	<button>log in</button>
-</form>
+<div class="container">
+	<div class="row">
+    <h1 style="text-align: center">login:</h1>
+    <div style="width: 32%; margin: 20px auto;">
+        <form action="/login" method="post">
+            <div class="form-group">
+                <input class="form-control" type="text" name="username" placeholder="username">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="password">
+            </div>
+            <div class="form-group">
+                <button class="btn btn-lg btn-info btn-block">log me in!</button>
+            </div>
+        </form>
+        <a href="/restaurants">go back to restaurants</a>
+    </div>
+</div>
 
 <%- include("./partials/footer.ejs") %>
