--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,23 @@
 <%- include("./partials/header.ejs") %>
 
-<h1>Register Page</h1>
-
-<form action="/register" method="post">
-	<input type="text" name="username" placeholder="username">
-	<input type="password" name="password" placeholder="password">
-	<button>sign up</button>
-</form>
+<div class="container">
+	<div class="row">
+    	<h1 style="text-align: center">sign up:</h1>
+    	<div style="width: 32%; margin: 20px auto;">
+        	<form action="/register" method="post">
+            	<div class="form-group">
+                	<input class="form-control" type="text" name="username" placeholder="username">
+            	</div>
+            	<div class="form-group">
+                	<input class="form-control" type="password" name="password" placeholder="password">
+            	</div>
+            	<div class="form-group">
+                	<button class="btn btn-lg btn-info btn-block">sign me up!</button>
+            	</div>
+        	</form>
+        	<a href="/restaurants">go back to restaurants</a>
+    	</div>
+	</div>
+</div>
 
 <%- include("./partials/footer.ejs") %>
