--- a/views/restaurants/edit.ejs
+++ b/views/restaurants/edit.ejs
@@ -27,6 +27,10 @@
     					</select>
 				</div>
 				<div class="form-group">
+    				<label for="location">Location</label>
+    				<input class="form-control" type="text" name="location" id="location" value="<%= restaurant.location %>">
+				</div>
+				<div class="form-group">
 					<button class="btn btn-lg btn-primary btn-block">submit</button>
 				</div>
 			</form>
