--- a/views/restaurants/new.ejs
+++ b/views/restaurants/new.ejs
@@ -25,6 +25,10 @@
     					</select>
 				</div>
 				<div class="form-group">
+    				<label for="location">Location</label>
+    				<input class="form-control" type="text" name="location" id="location" placeholder="Address">
+				</div>
+				<div class="form-group">
 					<button class="btn btn-lg btn-primary btn-block">submit</button>
 				</div>
 			</form>
