added typewriter effect, and style changes

--- a/views/restaurants/index.ejs
+++ b/views/restaurants/index.ejs
@@ -3,8 +3,8 @@
 <div class="container">
 	<header class="jumbotron">
 		<div class="container">
-			<h1>Welcome to ChowCritic</h1>
-			<p>Expore the best restaurants around.</p>
+			<h1 id="welcome"></h1>
+			<p>Explore the best restaurants around.</p>
 			<p>
 				<a class="btn btn-primary btn-lrg" href="/restaurants/new">add a new restaurant</a>
 			</p>
@@ -29,4 +29,7 @@
 	</div>
 </div>
 
-<%- include("../partials/footer.ejs") %>
+<!--Personal JS File-->
+<script type="text/javascript" src="textScript.js"></script>
+</body>
+</html>
