--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -8,6 +8,7 @@
 				<li class="list-group-item"> info 2 </li>
 				<li class="list-group-item"> info 3 </li>
 			</div>
+			<a href="/restaurants"> go back to restaurants</a>
 			<!-- Map will display here	-->
 			<div id="map"></div>
 		</div>
