--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,12 @@
+body{
+	background-color: #f5f5f5;
+}
+
+.caption-full{
+	padding-left: 50px;
+	padding-right: 50px;
+}
+
 .thumbnail img{
 	width: 100%;
 }
@@ -10,11 +19,20 @@
 	padding: 0; 
 }
 
+.well{
+	background-color: white;
+	padding-left: 27px;
+	padding-right: 27px;
+}
+
+#comment{
+	background-color: #f5f5f5;
+	padding: 10px 15px 10px 15px;
+	border-radius: 10px;
+	margin-bottom: 15px;
+}
+
 #map{
 	height: 450px;
 	width: 100%;
-}
-
-body{
-	background-color: #f5f5f5;
 }
